-- =============================================================
-- 001_init.sql
-- Purpose: Initialize database schema for IT Helpdesk Ticket
--          Management System
-- Target DB: PostgreSQL (Supabase-compatible)
-- Team: Julian Chavez, Jordan Sfiligoj, Joshua Torres
-- Course: CPSC 332 – CSUF
-- =============================================================

-- -------------------------------------------------------------
-- DEPARTMENT
-- Stores physical departments within the organization.
-- An End_User belongs to exactly one department.
-- -------------------------------------------------------------

CREATE TABLE Department 
(
  department_id    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  department_name  VARCHAR(100) NOT NULL UNIQUE,
  building_location VARCHAR(100) NOT NULL
);

-- -------------------------------------------------------------
-- EMPLOYEE (supertype)
-- Stores all shared employee attributes.
-- Every employee must belong to exactly one subtype:
-- End_User, Technician, or Admin (disjoint constraint).
-- Business Rules: unique employee_id, email, and SSN
-- DOB must be a valid past date 
-- -------------------------------------------------------------

CREATE TABLE Employee
(
  employee_id  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name          VARCHAR(120) NOT NULL,
  SSN           CHAR(11) NOT NULL UNIQUE,
  DOB           DATE NOT NULL,
  email         VARCHAR(255) NOT NULL UNIQUE,
  address       VARCHAR(255) NOT NULL,

  --DOB MUST BE IN THE PAST
  CHECK (DOB < CURRENT_DATE)
);

-- -------------------------------------------------------------
-- END_USER (subtype of Employee)
-- Employees who are allowed to submit tickets.
-- Each End_User belongs to exactly one Department.
-- employee_id is both PK and FK to Employee (1-to-1 inheritance).
-- -------------------------------------------------------------

CREATE TABLE End_User 
(
  employee_id   BIGINT PRIMARY KEY,
  department_id BIGINT NOT NULL,

  FOREIGN KEY (employee_id)    REFERENCES Employee(employee_id)   ON DELETE CASCADE,
  FOREIGN KEY (department_id) REFERENCES Department(department_id)
);

-- -------------------------------------------------------------
-- TECHNICIAN (subtype of Employee)
-- IT staff who are assigned to and resolve tickets.
-- employee_id is both PK and FK to Employee (1-to-1 inheritance).
-- -------------------------------------------------------------

CREATE TABLE Technician
(
  employee_id BIGINT PRIMARY KEY,
  skill_level VARCHAR(50) NOT NULL,

  FOREIGN KEY (employee_id) REFERENCES Employee(employee_id) ON DELETE CASCADE
);

-- -------------------------------------------------------------
-- ADMIN (subtype of Employee)
-- Administrators who monitor system performance.
-- employee_id is both PK and FK to Employee (1-to-1 inheritance).
-- -------------------------------------------------------------

CREATE TABLE Admin
(
  employee_id BIGINT PRIMARY KEY,
  admin_level VARCHAR(50) NOT NULL,

  FOREIGN KEY (employee_id) REFERENCES Employee(employee_id) ON DELETE CASCADE
);

-- -------------------------------------------------------------
-- STATUS (lookup table)
-- Valid ticket statuses: Open, In Progress, Closed (BR #8).
-- -------------------------------------------------------------

CREATE TABLE Status 
(
  status_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  status_name VARCHAR(20) NOT NULL UNIQUE,

  CHECK (status_name IN ('Open', 'In Progress', 'Closed'))
);

-- -------------------------------------------------------------
-- CATEGORY (lookup table)
-- Classifies tickets by issue type (e.g., Hardware, Network).
-- -------------------------------------------------------------

CREATE TABLE Category
(
  category_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  category_name VARCHAR(60) NOT NULL UNIQUE
);

-- -------------------------------------------------------------
-- TICKET
-- Core entity. Submitted by an End_User only).
-- Must have a valid status and category.
-- Resolution details only apply when status is Closed.
-- Resolution date must be after creation date.
-- No duplicate tickets: same user + title + creation date
-- is blocked by a UNIQUE constraint.
-- -------------------------------------------------------------

CREATE TABLE Ticket 
(
  ticket_id   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  title       VARCHAR(140) NOT NULL,
  description TEXT NOT NULL,
  creation_date TIMESTAMPTZ NOT NULL DEFAULT NOW (), 
  resolution_details TEXT,
  resolution_date TIMESTAMPTZ,
  status_id BIGINT NOT NULL,
  category_id BIGINT NOT NULL, 
  End_User_id BIGINT NOT NULL,

  CHECK (resolution_date IS NULL OR resolution_date > creation_date),

  UNIQUE (End_User_id, title, creation_date),

  FOREIGN KEY (status_id) REFERENCES Status(status_id),
  FOREIGN KEY (category_id) REFERENCES Category(category_id),
  FOREIGN KEY (End_User_id) REFERENCES End_User(employee_id)
);

-- -------------------------------------------------------------
-- ASSIGNMENTS (junction/associative table)
-- Tracks which Technician(s) are assigned to which Ticket.
-- A ticket can have multiple technicians.
-- Technician must exist before being assigned.
-- -------------------------------------------------------------

CREATE TABLE Assignments
(
  assignment_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  ticket_id BIGINT NOT NULL,
  technician_id BIGINT NOT NULL,

  --prevent assigning same tech. to same ticket 2x
  UNIQUE (ticket_id, technician_id),

  FOREIGN KEY (ticket_id) REFERENCES Ticket(ticket_id) ON DELETE CASCADE,
  FOREIGN KEY (technician_id) REFERENCES Technician(employee_id)

);

CREATE INDEX idx_ticket_status        ON Ticket(status_id);
CREATE INDEX idx_ticket_category      ON Ticket(category_id);
CREATE INDEX idx_ticket_enduser       ON Ticket(End_User_id);
CREATE INDEX idx_assignment_ticket    ON Assignments(ticket_id);
CREATE INDEX idx_assignment_tech      ON Assignments(technician_id);

